refactor: extracted parsing methods to dedicated utility class